# zknet

./: .gitignore  Cargo.toml
cifar10/: truth.pkl
params/: params.pkl  params_nin.pkl
src/: accuracy.rs  infer.rs  io.rs  main.rs  nn.rs  scalar.rs  serialize.rs  util.rs  zk.rs
src/nn/: lenet.rs  lenet_unoptimized.rs  mod.rs  nin.rs  nin_unoptimized.rs  nn_serialize.rs  run.rs  zk.rs
src/r1cs/: conv2d_compact.rs  conv2d_padded_compact.rs  cs_serialize.rs  elliptic_curve.rs  fully_connected_compact.rs  mod.rs  packing.rs  sum_pool.rs
src/r1cs/poseidon/: constant.rs  mod.rs
src/tensor/: mod.rs  tensor_serialize.rs
