[package]
name = "zknet"
version = "0.1.0"
authors = ["Hy Vuong <vuonghy2442@hotmail.com.vn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
serde = "1.0.126"
serde-pickle = "0.6.2"

[profile.release]
lto = true