[package]
name = "zknet"
version = "0.1.0"
authors = ["Hy Vuong <vuonghy2442@hotmail.com.vn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
serde = "1.0.126"
serde-pickle = "0.6.2"
spartan = "0.3.0"
merlin = "3.0.0"
curve25519-dalek = "3.1.0"
bincode = "1.3.3"
rand = "0.7"
clap = "2.33"
zstd = "0.9"
sha2 = "0.9"
simplelog = "0.10"
log = "0.4"
quanta = "0.9"

[profile.release]
lto = true